karnc/tests/fixtures/negative/148_adapter_consumes_cycle/src/beta.karn
adapter beta {
  binding "./beta.binding.ts"
  consumes alpha { A }

  exports capability { B }

  capability B {
    fn b() -> Effect[Int]
  }

  provides B = BImpl given A
}
